--- a/medio.html
+++ b/medio.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="tab.html">Inicio</a>
+    <a href="index.html">Inicio</a>
     Medio
 </body>
 </html>
